# AI-for-Accessibility-Toolkit-Draft

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture-discussion.md
ai4a11y/: __init__.py  __main__.py  cli.py  llm.py  models.py  orchestrator.py  profiles.py
ai4a11y/agents/: __init__.py  adapt.py  app.py  user.py
ai4a11y/scaffold/: __init__.py
ai4a11y/testing/: __init__.py  standard.py
ai4a11y/tools/: __init__.py  base.py  registry.py
ai4a11y/tools/builtin/: __init__.py  wcag_check.py
corpus/: README.md
docs/: architecture.md
projects/: README.md
tests/: test_models.py  test_profiles.py  test_wcag_check.py
